tests/syntax_tests/data/parsing/errors/pattern/templateLiteral.res
let zeroCoord = "0.0" 

switch l {
| `zero coord ${zeroCoord}` => ()
| `first coord ${zeroCoord} snd ${zeroCoord} ` => ()
| _ => ()
}
